grml-live (0.9.10) unstable; urgency=low

  * buildd:
    - Add workaround to get around the mkisofs volume label limit.
      Otherwise with something like 'grml64-medium-daily-squeeze 20090223'
      we would get:
      "mkisofs: Volume ID string too long (cur. XX max. 32 chars)."
    - add buildd/execute.sh to further simplify buildd/*.sh setup

 -- Michael Prokop <mika@grml.org>  Tue, 24 Feb 2009 00:12:01 +0100

grml-live (0.9.9) unstable; urgency=low

  * Update to kernel 2.6.28-grml[64].
  * Changes in GRML_FULL:
    - drop package tspc (see #462738 and #515193)
    - replace gqview with geeqie (thanks, Spida)
  * Changes in GRML_MEDIUM:
    - add beep (on request by gebi)
    - add dstat (on request by gebi)
    - add mc (on request by Christian Kuehlborn)
  * Document noautoconfig in grml-cheatcodes. Thanks to Ralf Moll!
  * buildd:
    - rename all etch* related scripts to lenny*
    - adjust scripts to use "lenny" instead of "stable" for building
      [to avoid that "etch" is used as build name but lenny is used]
    - use "$NAME-daily-$SUITE" in functions.sh as build name so
      identifying ISOs while running them is easier
  * Support squeeze as valid suite name.
  * Comment Debian/unstable in /etc/grml/fai/apt/preferences by default.
    This should avoid issues with something like
    'apt-get -t experimental ...'
  * Consequently drop 'Latest change' lines from all files.
  * Support generation of sha1sum [Testing: issue622]
  * Drop first, unnecessary APPEND line in isolinux.cfg and syslinux.cfg.
    [Closes: issue492]
  * Do no longer use the bootoption lang=us by default. We use it by default
    in grml-autoconfig anyway and this shortens our /proc/cmdline.
  * Run commands requiring network access through 'timeout 10' by default
    if possible. [Closes: issue396]
  * Do not use build server's hostname for /etc/mailname and
    /etc/bacula/bacula-fd.conf. [Testing: issue412]